src/client/web-static/default.css
body {
  font-family: Arial, Veranda, 'sans-serif normal';
  background-color: #D5DDE0;
  box-sizing: border-box;
  display: block;
  -webkit-font-smoothing: antialiased;
}

#root {
  margin: 0 auto;
  max-width: 550px;
  background: #FFFFFF;
  box-shadow: -0.25em 0 2.5em 0 rgba(0, 0, 0, 0.1);
  display: block;
}

.todoApp {
  margin-top: 50px;
  padding-bottom: 10px;
  background: #F8F8F8;
  box-sizing: border-box;
  display: block;
}

.todoApp header {
  font-size: 22px;
  height: 160px;
}

.todoApp section {
  box-sizing: border-box;
  display: block;
}

header h1 {
  width: 100%;
  padding: 0;
  margin: 20px 10px 0px 0;
  color: #8A8080;
  font-size: 32px;
  line-height: 80px;
  font-weight: normal;
  text-align: center;
  display: block;
  box-sizing: border-box;
}

h1 .next {
  color: #186FCA;
}

section ul {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  display: block;
}

section li {
  font-size: 24px;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  display: block;
}

div.todoItem input, div.todoItem label, div.todoItem button {
  float: left;
}

.todoList {
  padding-bottom: 20px;
}

div.todoItem {
  width: 100%;
  height: 60px;
  margin-bottom: 20px;
  box-sizing: border-box;
}

div.todoItem button {
  width: 25px;
  height: 25px;
  margin-top: 18px;
  margin-left: 15px;
  background-color: #186FCA;
  border-radius: 6px;
  border: 0;
  box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.2);
}

input.newTodo {
  width: 80%;
  margin-left: 10%;
  margin-bottom: 50px;
  font-size: 24px;
  padding: 16px;
  border: none;
  outline: none;
  background-color: #F8F8F8;
  box-sizing: border-box;
  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.2);
  display: block;
}

input[type="text"]:focus {
  background-color: #FFFFFF;
  box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.2);
}

.todoCompletedText {
  width: 80%;
  margin-left: 10%;
  font-size: 24px;
  outline: none;
  padding: 16px;
  border: none;
  box-sizing: border-box;
  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.2);
  display: block;
}

.editing input.edit {
  margin-top: 40px;
}

.pos0 input.edit {
  margin-top: 20px;
}

input.edit {
  width: 80%;
  margin-top: 20px;
  margin-left: 10%;
  font-size: 24px;
  padding: 16px;
  border: none;
  outline: none;
  background-color: #F8F8F8;
  box-sizing: border-box;
  box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.2);
  display: block;
}

input[type="checkbox"] {
  position: relative;
  width: 50px;
  transform: scale(2);
 -webkit-transform: scale(2);
  left: 30px;
  top: 40px;
}

input.toggle-all {
  position: relative;
  top: -60px;
}

li.completed .todoCompletedText {
  color: #AAAAAA;
  text-decoration: line-through;
}

.footer {
  color: #8A8080;
  font-size: 14px;
  line-height: 30px;
  text-align: right;;
}

